--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
+    "@headlessui/react": "^2.2.1",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/postcss": "^4.0.17",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.6.5",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.487.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
